syntax = "proto3";

option go_package ="github.com/bovf/bovf/gRPCLearning";

package greeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetTimeDelta(TimeRequest) returns (TimeReply) {}
  rpc SearchLDAP (LDAPSearchRequest) returns (LDAPSearchReply) {}
  rpc AddLDAP (LDAPAddRequest) returns (LDAPAddReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message TimeRequest {
 int64 client_time = 1;
}

message TimeReply {
  int64 server_time = 1;
  int64 client_time = 2;
  int64 delta = 3;
}

message LDAPSearchRequest {
  string baseDN = 1;
  string filter = 2;
  repeated string attributes = 3;
}

message LDAPSearchReply {
  repeated LDAPEntry entries = 1;
}

message LDAPEntry {
  string DN = 1;
  map<string, LDAPAttribute> attributes = 2;
}

message LDAPAttribute {
  repeated string values = 1;
}

message LDAPAddRequest {
  string DN = 1;
  map<string, LDAPAttribute> attributes = 2;
}

message LDAPAddReply{
  bool success = 1;
  string error = 2;
}
